		* Invalidate the calculated column if one of the variable columns was deleted
		* In "Functions Values" dialog highlight the variable column combobox red if the variable column was deleted in the project
		* In "Functions Values" dialog don't allow to select columns to be calculated as variable columns (avoid circular dependencies)
	* [spreadsheet] when pasting data into empty columns, automatically convert their type to the type of the data to be pasted
	* BUG 406805 - support für directory structures in ROOT files
	* Automatically update curves if a data column deleted before was re-added again (during the import or manually)
	* When auto-scaling in the plot take also the error bars into account, if available
	* For live data sources allow to save the relative path to the data source

UX improvements:
	* in the "Import Data" dialog show the history of the recently imported files
	* Improved the selection of curves in the plot that are near to or behind each other
	* BUG 408529 - Allow to use DEL to delete cells in spreadsheet and matrix
	* BUG 408537 - Allow to insert multiple rows and columns in the spreadsheet in one step
	* Added translations to Windows and macOS packages
	* Allow to stop the current selection in the plot with ESC
	* BUG 410855 - Seed the random number generator with the current time in order not to generate repetitive numbers in the spreadsheet.

Performance:
	* Increased the plotting speed for curves with many data points by removing points which are shown on the same pixel in the scene

Bug fixes:
	* Disable autoscale when zooming, otherwise wrong (= auto scaled) data region is shown after project save&open
	* [macOS] fix determining number of lines of data files
	* Bug 408530 - correctly show error bars for data source columns having NANs
	* Bug 407847 - fixed the broken project import
	* [data fitting] handle weighted fitting with zero errors correctly
	* [data fitting] allow weighted fitting with data source from curve